force-app/main/default/objects/Product2/fields/Box_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Box_Quantity__c</fullName>
    <description>Number of dosage units per commercial pack (e.g. 30 capsules). Required on Detail and Sample.</description>
    <label>Box Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>