force-app/main/default/objects/Product2/fields/Brand_Reminder_Kind__c.field-meta.xml
<CustomField>
    <fullName>Brand_Reminder_Kind__c</fullName>
    <description>Kind of brand reminder leave-behind: Brochure or Bug (giveaway).</description>
    <label>Brand Reminder Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>