force-app/main/default/objects/Product2/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>Dosage form for Detail/Sample products (Tablet, Capsule, Syrup, etc.). Brand Reminder kinds use Brand Reminder Kind.</description>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Film Coated Tablet</fullName>
            </value>
            <value>
                <fullName>Sugar Coated Tablet</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Syrup</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Sachet</fullName>
            </value>
            <value>
                <fullName>Drops</fullName>
            </value>
            <value>
                <fullName>Gummies</fullName>
            </value>
            <value>
                <fullName>Ampoule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>