force-app/main/default/objects/Product2/fields/Mirror_Line__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Line__c</fullName>
    <description>Secondary / mirror line alignment (e.g. CHC_SALES).</description>
    <label>Mirror Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>