force-app/main/default/objects/Product2/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Brand product. Detail, Sample, and Brand Reminder children point to their Brand.</description>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>Child_Products</relationshipName>
    <type>Lookup</type>
</CustomField>