force-app/main/default/objects/Product2/fields/Primary_Brand__c.field-meta.xml
<CustomField>
    <fullName>Primary_Brand__c</fullName>
    <description>Franchise / primary brand name (e.g. DOZOVA, NEXICURE). May differ from the commercial Brand row name.</description>
    <label>Primary Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>