force-app/main/default/objects/Product2/fields/Quantity_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Per_Unit__c</fullName>
    <description>Numeric strength/amount per dosage unit (e.g. 20 for 20 mg). Required on Detail and Sample.</description>
    <label>Quantity Per Unit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>