force-app/main/default/objects/Product2/fields/Sales_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Line__c</fullName>
    <description>Commercial sales line (GIT-I, DIAB-II, NEUROSCIENCE, PEDIA, CVM-I, ORTHO-I, etc.).</description>
    <label>Sales Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>