force-app/main/default/objects/Product2/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <description>Commercial sales unit (GIT, CLUSTER, DIAB, CHC, Gyna, Non-Promoted).</description>
    <label>Sales Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>