force-app/main/default/objects/Product2/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <description>Pharmaceutical strength / concentration (e.g. 135mg, 10mg + 20mg).</description>
    <label>Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>