force-app/main/default/objects/Product2/fields/Therapy_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Area__c</fullName>
    <description>Therapeutic area for pharma product alignment (e.g. Gastroenterology, Cardiology).</description>
    <label>Therapy Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Consumer Health</fullName>
            </value>
            <value>
                <fullName>Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Rheumatology</fullName>
            </value>
            <value>
                <fullName>CHC</fullName>
                <isActive>false</isActive>
                <label>CHC</label>
            </value>
            <value>
                <fullName>Diabetes</fullName>
                <isActive>false</isActive>
                <label>Diabetes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>